--- a/orientacao_objeto.ipynb
+++ b/orientacao_objeto.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jGqJ4P721S3Y"
       },
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "e3mImTcT2X5d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "3gn5Z_Ac2Y-k"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "ua_2iBx72aeo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "S2cObaT32hNk"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "is0YiNJP2qDU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "d_Zy7i1Y2vr8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,6 +156,83 @@
       "metadata": {
         "id": "_EO4EMVs2_x1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Conta:\n",
+        "\n",
+        "    # Criando construtor usando uma função construtora\n",
+        "    def __init__(self,numero, titular, saldo, limite = 1000.0):\n",
+        "        print(\"Construindo objeto ... {}\".format(self))\n",
+        "        self.numero = numero\n",
+        "        self.titular = titular\n",
+        "        self.saldo = saldo\n",
+        "        self.limite = limite\n",
+        "\n",
+        "    def extrato(self):\n",
+        "        print(\"Saldo de {} do titular {}\".format(self.saldo, self.titular))\n",
+        "\n",
+        "    def deposita(self, valor):\n",
+        "        self.saldo += valor\n",
+        "\n",
+        "    def saca(self, valor):\n",
+        "        self.saldo -= valor"
+      ],
+      "metadata": {
+        "id": "iiPBrUpZc72e"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta = Conta(123, \"Nico\", 55.0, 1000.0 )"
+      ],
+      "metadata": {
+        "id": "IOuSJG-_c9n4",
+        "outputId": "43d13a8b-dd36-4d86-d6ba-5eb8908e5149",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Construindo objeto ... <__main__.Conta object at 0x7f92ad9ef820>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta.numero"
+      ],
+      "metadata": {
+        "id": "peWO1vExdEmx",
+        "outputId": "b2aed704-9260-48c3-e492-44f249a6b74d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "123"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
