--- a/collections.ipynb
+++ b/collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIhHyNLuMVD1eN3D7Uw5++",
+      "authorship_tag": "ABX9TyPJ2XxZIjQsE5f1NptzWUPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,206 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# LISTA"
+      ],
+      "metadata": {
+        "id": "y6OyxMo_2Gte"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "n8Mu4jYPxT_7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "idade1 = 39\n",
+        "idade2 = 30\n",
+        "idade3 = 27\n",
+        "idade4 = 18\n",
+        "\n",
+        "print(idade1)\n",
+        "print(idade2)\n",
+        "print(idade3)\n",
+        "print(idade4)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lista\n",
+        "idades = [39, 30, 27, 18]"
+      ],
+      "metadata": {
+        "id": "R4OPujMCzWpS"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Informa a classe\n",
+        "type(idades)"
+      ],
+      "metadata": {
+        "id": "2eoJxXtSzb9S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Número de elementos na lista\n",
+        "len(idades)"
+      ],
+      "metadata": {
+        "id": "oW2losWI08py"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imprime o primeiro elemento\n",
+        "idades[0]"
+      ],
+      "metadata": {
+        "id": "YlmUHDsK1cHB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imprime tudo\n",
+        "idades"
+      ],
+      "metadata": {
+        "id": "sAEtCEoF1jBD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(idades[1])\n",
+        "print(idades[2])\n",
+        "print(idades[3])"
+      ],
+      "metadata": {
+        "id": "AG0faszw1kwb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adicionar item ao fim da lista\n",
+        "idades.append(15)"
+      ],
+      "metadata": {
+        "id": "tdY3E0LT16Ts"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades"
+      ],
+      "metadata": {
+        "id": "CtQcfojC1-uP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Informa o 5 elemento da lista\n",
+        "idades[4]"
+      ],
+      "metadata": {
+        "id": "GYW74TtP2AfG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for idade in idades:\n",
+        "  print(idade)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nBXTcCiY2DuW",
+        "outputId": "ae3f0737-335f-49fc-91ec-2104317888ab"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "39\n",
+            "30\n",
+            "27\n",
+            "18\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removendo um elemento da lista\n",
+        "idades.remove(30)"
+      ],
+      "metadata": {
+        "id": "f2UgsntM2RHG"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QnOwK31N2UD_",
+        "outputId": "c52b7124-e72b-431a-dc54-edb5bc8c09db"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 27, 18, 15]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
