--- a/collections.ipynb
+++ b/collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ2XxZIjQsE5f1NptzWUPk",
+      "authorship_tag": "ABX9TyN1c542/5ytWrtsHmBHBbq5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "R4OPujMCzWpS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "tdY3E0LT16Ts"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,26 +169,10 @@
         "  print(idade)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nBXTcCiY2DuW",
-        "outputId": "ae3f0737-335f-49fc-91ec-2104317888ab"
+        "id": "nBXTcCiY2DuW"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "39\n",
-            "30\n",
-            "27\n",
-            "18\n",
-            "15\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -199,7 +183,70 @@
       "metadata": {
         "id": "f2UgsntM2RHG"
       },
-      "execution_count": 12,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades.append(27) # Adiciona um elemento ao fim da lista\n",
+        "idades.remove(27) # Remove o primeiro elemento da lista que tenha o valor 27\n",
+        "idades"
+      ],
+      "metadata": {
+        "id": "QnOwK31N2UD_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "28 in idades"
+      ],
+      "metadata": {
+        "id": "x3CIGqXM3bnE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "15 in idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7CCr2EfJ3ie1",
+        "outputId": "6aa57ee0-d9d2-4b69-eb61-1dc26d01dbcf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove o elemento de valor 15 na lista\n",
+        "if 15 in idades:\n",
+        "  idades.remove(15)"
+      ],
+      "metadata": {
+        "id": "qNZ39hTc3mQt"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,22 +258,400 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QnOwK31N2UD_",
-        "outputId": "c52b7124-e72b-431a-dc54-edb5bc8c09db"
+        "id": "Nv7f2c6D3pRF",
+        "outputId": "ef63de99-20d9-41bb-efc5-14cf0a093135"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[39, 27, 18, 15]"
+              "[39, 18, 27]"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removendo elemento de valor 28 na lista\n",
+        "if 28 in idades:\n",
+        "  idades.remove(28)"
+      ],
+      "metadata": {
+        "id": "Zd2TehbB3tuw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# como o valor 28 nao tem na lista, não houve remoção alguma\n",
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CAFVGbWd31rg",
+        "outputId": "8d069196-1dc8-4985-9c47-b5accf74a14a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 18, 27]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades.append(19)\n",
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qRxpwSOX39Dm",
+        "outputId": "bf04171d-4b45-41ba-e4a8-f877d17a25c5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 18, 27, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Inserindo elemento de valor 20 como o primeiro da lista\n",
+        "idades.insert(0, 20)\n",
+        "idades"
+      ],
+      "metadata": {
+        "id": "LqXjK7vy4BW3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades.append([27,19])"
+      ],
+      "metadata": {
+        "id": "PRGjF0nq4J9b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zlXeJjIy4PcD",
+        "outputId": "6691e9b5-43b3-44df-a99a-ca9c667910fd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[20, 39, 18, 27, 19, [27, 19]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for elemento in idades:\n",
+        "  print(\"Recebi o elemento\", elemento)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1WXVknRm4QVD",
+        "outputId": "9271ed58-2099-4372-cbc5-5f2c4fbb537f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Recebi o elemento 20\n",
+            "Recebi o elemento 39\n",
+            "Recebi o elemento 18\n",
+            "Recebi o elemento 27\n",
+            "Recebi o elemento 19\n",
+            "Recebi o elemento [27, 19]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades = [20, 39, 18]\n",
+        "idades.extend([27, 19])\n",
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UWRqUr9y4kga",
+        "outputId": "6711f3ac-5654-4079-a749-f71378b5f938"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[20, 39, 18, 27, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for idade in idades:\n",
+        "  print(idade+1)"
+      ],
+      "metadata": {
+        "id": "_jV3891E45m8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades_no_ano_que_vem = []\n",
+        "for idade in idades:\n",
+        "  idades_no_ano_que_vem.append(idade+1)\n",
+        "idades_no_ano_que_vem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g-CSSlqn5Al8",
+        "outputId": "91f09de6-1c64-4fe0-82b0-d89553a50d13"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[21, 40, 19, 28, 20]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GRpix1F051Q_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# LIST COMPREHENSION"
+      ],
+      "metadata": {
+        "id": "7aKwtVQQ3ZHz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[(idade+1) for idade in idades]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bUywmipB58HT",
+        "outputId": "a30d2e0d-8273-4d41-c950-332b5a170154"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[21, 40, 19, 28, 20]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades_no_ano_que_vem = [(idade+1) for idade in idades]\n",
+        "idades_no_ano_que_vem"
+      ],
+      "metadata": {
+        "id": "CeW3gLNA6Fqc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[(idade) for idade in idades if idade > 21]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "joU7zls36Ozx",
+        "outputId": "259c46d9-0055-43fa-fd89-a0d06ab2ef02"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 27]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x707IXj06kPV",
+        "outputId": "2bded533-2ba7-4206-9b88-b1c9438c74ad"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[20, 39, 18, 27, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def proximo_ano(idade):\n",
+        "  return idade+1\n",
+        "\n",
+        "[proximo_ano(idade) for idade in idades if idade > 21]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n2EqHaOg6lr6",
+        "outputId": "0a7398c2-635b-4a91-ca1b-6f91b9c3ff04"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[40, 28]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def faz_processamento_de_visualizacao(lista):\n",
+        "  print(len(lista))\n",
+        "  lista.append(13)"
+      ],
+      "metadata": {
+        "id": "-GpX5l2A6tur"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idades = [16, 21, 29, 56, 43]\n",
+        "faz_processamento_de_visualizacao(idades)\n",
+        "idades"
+      ],
+      "metadata": {
+        "id": "iFhGKY_h7sKS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
