--- a/collections.ipynb
+++ b/collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1c542/5ytWrtsHmBHBbq5",
+      "authorship_tag": "ABX9TyPQjy42oqaJ/yTbUUB6FYRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -649,6 +649,455 @@
       ],
       "metadata": {
         "id": "iFhGKY_h7sKS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def faz_processamento_de_visualizacao(lista = []):\n",
+        "  print(len(lista))\n",
+        "  print(lista)\n",
+        "  lista.append(13)"
+      ],
+      "metadata": {
+        "id": "8T69sxm3L_nb"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jj2K98wbMFID",
+        "outputId": "a913958d-9d60-491a-f136-a1d36affd0b1"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "[]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rqJcWaV8MLhj",
+        "outputId": "01c687e7-faac-4c30-b6a4-fc85e1f0fecc"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "[13]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mgInWRDhNjOx",
+        "outputId": "62ba75ad-c568-4138-e4d0-af16e2f87d7d"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "[13, 13]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def faz_processamento_de_visualizacao(lista = []):\n",
+        "  print(len(lista))\n",
+        "  print(lista)\n",
+        "  lista.append(13)"
+      ],
+      "metadata": {
+        "id": "JNj3qSX7NlYH"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()\n",
+        "faz_processamento_de_visualizacao()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WvYr2uJ8NtKA",
+        "outputId": "03c07936-882e-4fe6-baf8-e6755bb9410f"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "[]\n",
+            "1\n",
+            "[13]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def faz_processamento_de_visualizacao(lista = None):\n",
+        "  if lista == None:\n",
+        "    lista = list()\n",
+        "  print(len(lista))\n",
+        "  print(lista)\n",
+        "  lista.append(13)"
+      ],
+      "metadata": {
+        "id": "-zB2fqhhNybQ"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()\n",
+        "faz_processamento_de_visualizacao()\n",
+        "faz_processamento_de_visualizacao()\n",
+        "faz_processamento_de_visualizacao()\n"
+      ],
+      "metadata": {
+        "id": "SuAV480AN_cA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# OBJETOS PRÓPRIOS"
+      ],
+      "metadata": {
+        "id": "Dv0n76Y8PKaG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ContaCorrente:\n",
+        "  def __init__(self, codigo):\n",
+        "    self.codigo = codigo\n",
+        "    self.saldo = 0\n",
+        "\n",
+        "  def deposita(self, valor):\n",
+        "    self.saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return \"[>>Codigo {} Saldo {}<<]\".format(self.codigo, self.saldo)"
+      ],
+      "metadata": {
+        "id": "kmWPrwkPPODc"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui = ContaCorrente(15)\n",
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NtbohW0WPuul",
+        "outputId": "fc932b7f-ddc4-4428-d56c-bd390706aa92"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 0<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui.deposita(500)\n",
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hvxpGlrrP6FW",
+        "outputId": "d5a71f24-367c-4487-f645-18f0a3526bd5"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 500<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_da_dani = ContaCorrente(47685)\n",
+        "conta_da_dani.deposita(1000)\n",
+        "print(conta_da_dani)"
+      ],
+      "metadata": {
+        "id": "U2PskNNhQALO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas = [conta_do_gui, conta_da_dani]\n",
+        "print(contas)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1GRm2kUHQKem",
+        "outputId": "dbbbaf5f-3a1b-411f-9ff3-2ea9eab80b90"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[<__main__.ContaCorrente object at 0x7b227fa391e0>, <__main__.ContaCorrente object at 0x7b227fa39000>]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "metadata": {
+        "id": "MoQPCyqnQyMh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas = [conta_do_gui, conta_da_dani, conta_do_gui]"
+      ],
+      "metadata": {
+        "id": "MP6-JrWNQ9lE"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kw8Qj6CCRBUB",
+        "outputId": "f1f38769-c860-4526-fdf1-4c6502a06b59"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 500<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui.deposita(100)"
+      ],
+      "metadata": {
+        "id": "M5RzRl51REmD"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ekV2oouoRTIa",
+        "outputId": "c59c0852-f268-4ec6-fc10-0c2764f51f16"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 600<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Z2to3TXReXq",
+        "outputId": "31d307ba-3371-45b6-e741-8c6d2a94bee8"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 600<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(contas[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BqrYT659RhOD",
+        "outputId": "17016763-823f-4d93-cc92-0ef61b17182c"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 600<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas[2].deposita(300)"
+      ],
+      "metadata": {
+        "id": "hmVdt2TNRpNb"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(conta_do_gui)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_2oas47qRruj",
+        "outputId": "95c6cff7-b753-48be-b862-3ae973e0ded2"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 900<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# TUPLAS"
+      ],
+      "metadata": {
+        "id": "xshvq7gmTQyX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KJBKo8mRTSW3"
       },
       "execution_count": null,
       "outputs": []
